# xsam

./: .gitignore  LICENSE  README.md  best_practices.md  main.py  project_setup_process.html  project_setup_process.md  pyproject.toml
docs/: carry_model.md  discretisation.md  estimation.md  simulation.md  stochastic_processes.md  value_model.md
docs/docx/: carry_model.docx  discretisation.docx  estimation.docx  simulation.docx  stochastic_processes.docx  value_model.docx
issues/: 1.md  optimize-aggregation-efficiency.md
src/xsam/: __init__.py  aggregation.py  constants.py  input.py  logger.py  main.py  output.py  utilities.py
src/xsam/charts/: app.py  arrangement.py  config.py
src/xsam/charts/plot_types/: __init__.py  colors.py  distribution.py  dual_axis_line.py  efficient_frontier_time.py  line.py  regression_scatter.py
src/xsam/mbs/: __init__.py  main.py  mock_data.py  stochastic_processes.py  value_model.py  value_model_eval.py  value_model_evaluation.py  value_model_main.py
src/xsam/portfolio/: asset.py  portfolio.py  risk_budget.py  trade.py
tests/: test_aggregation.py  test_input.py  test_logger.py  test_ouput.py  test_output.py
tests/charts/: test_arrangement.py  test_config.py
tests/charts/plot_types/: test_distribution.py  test_dual_axis_line.py  test_efficient_frontier_time.py  test_line.py  test_regression_scatter.py
