[project]
name = "xsam"
version = "0.1.10"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "dash>=3.0.3",
    "matplotlib>=3.10.0",
    "pandas[computation,excel,output-formatting,performance,plot]>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]
authors = [
    {name = "Stabile Frisur", email = "stabilefrisur@proton.me"},
]
description = "XSAM assistant"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://pypi.org/project/xsam/"
repository = "https://github.com/stabilefrisur/xsam.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsam"]

[tool.hatch.build]
exclude = ["docs", "output"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
xsam = "xsam.main:main"
